feat: key example
